# tiangong-core

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  config.example.json  env.example  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: cli.md  prd.md  todo_list.md
runtime/: agent.json
tests/: test_agent_loop_tool_truncation_and_sequence.py  test_bus_outbound_listeners.py  test_channels_cli_allowlist.py  test_channels_manager_dispatch.py  test_config_dashscope_json.py  test_config_env_layers.py  test_config_json_priority.py  test_context_builder.py  test_e2e_dummy_provider.py  test_feishu_webhook_parsing.py  test_flow_pocketflow_glue.py  test_gateway_pidfile.py  test_litellm_provider_drop_params.py  test_provider_registry.py  test_providers_registry.py  test_qq_channel_send.py  test_session_manager_history.py  test_session_manager_history_and_cache.py  test_skills_builtin_fallback.py  test_tools_cron_spawn_mcp_placeholders.py
tiangong_core/: .gitignore  app.py  cli.py  config.py
tiangong_core/agent/: context.py  loop.py  skills.py  subagent.py
tiangong_core/bus/: events.py  queue.py
tiangong_core/channels/: __init__.py  base.py  cli.py  config.py  feishu.py  http.py  manager.py  qq.py  telegram.py
tiangong_core/cron/: service.py
tiangong_core/flow/: __init__.py  runner.py  schemas.py
tiangong_core/flow/nodes/: __init__.py  chat.py  tool_exec.py
tiangong_core/gateway/: __init__.py  pidfile.py  service.py
tiangong_core/providers/: base.py  litellm_provider.py  registry.py
tiangong_core/runtime/: identity.py
tiangong_core/session/: manager.py
tiangong_core/skills/: __init__.py  runtime.py
tiangong_core/skills/adapters/: cron.py  fs.py  mcp.py  message.py  shell.py  spawn.py
tiangong_core/templates/skills/clawhub/: SKILL.md
tiangong_core/templates/skills/cron/: SKILL.md
tiangong_core/templates/skills/fs/: SKILL.md
tiangong_core/templates/skills/github/: SKILL.md
tiangong_core/templates/skills/mcp/: SKILL.md
tiangong_core/tools/: fs.py  message.py  registry.py  shell.py
(+5 files in other folders)
